--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<!-- <html lang="en" data-bs-theme="dark"> -->
+<!-- <html lang="en">  -->
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
